{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 913,
  "lineage": "9645524e-e7b0-28b2-5aac-60a3c44b2ee2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "TechEC2Instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:967126546173:instance/i-0c16caca8059dd4cd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c16caca8059dd4cd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c14f698509eccac4",
            "private_dns": "ip-172-16-1-28.ec2.internal",
            "private_ip": "172.16.1.28",
            "public_dns": "ec2-3-90-33-196.compute-1.amazonaws.com",
            "public_ip": "3.90.33.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b1ab18587dbe44b9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f3ff7b6999123ecd",
            "tags": {
              "Name": "Web"
            },
            "tags_all": {
              "Name": "Web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f5ff35fd232ff170"
            ]
          },
          "dependencies": [
            "aws_security_group.TechVPC_SG",
            "aws_subnet.TechVPC_Pub_SN",
            "aws_vpc.TechVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "TechVPC_IGT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967126546173:internet-gateway/igw-0e5259f114157c0a7",
            "id": "igw-0e5259f114157c0a7",
            "owner_id": "967126546173",
            "tags": {
              "Name": "Tech VPC Internet Gateway"
            },
            "tags_all": {
              "Name": "Tech VPC Internet Gateway"
            },
            "vpc_id": "vpc-09a8b2dd07287bfec"
          },
          "dependencies": [
            "aws_vpc.TechVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "TechVPC_Resource",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e5259f114157c0a7",
            "id": "r-rtb-0962dc0fac3dc81341080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0962dc0fac3dc8134",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.TechVPC_IGT",
            "aws_route_table.TechVPC_Route_Table",
            "aws_vpc.TechVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "TechVPC_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967126546173:route-table/rtb-0962dc0fac3dc8134",
            "id": "rtb-0962dc0fac3dc8134",
            "owner_id": "967126546173",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Tech VPC Route Table"
            },
            "tags_all": {
              "Name": "Tech VPC Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a8b2dd07287bfec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.TechVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "TechVPC_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8b2395aa36f50c5",
            "route_table_id": "rtb-0962dc0fac3dc8134",
            "subnet_id": "subnet-0f3ff7b6999123ecd"
          },
          "dependencies": [
            "aws_route_table.TechVPC_Route_Table",
            "aws_subnet.TechVPC_Pub_SN",
            "aws_vpc.TechVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "TechVPC_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967126546173:security-group/sg-0f5ff35fd232ff170",
            "description": "Security Group for Web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5ff35fd232ff170",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port for SG",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port for SG",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port for SG",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web_SG",
            "name_prefix": "",
            "owner_id": "967126546173",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09a8b2dd07287bfec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.TechVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TechVPC_Pub_SN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967126546173:subnet/subnet-0f3ff7b6999123ecd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3ff7b6999123ecd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "967126546173",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tech VPC Pub Subnet"
            },
            "tags_all": {
              "Name": "Tech VPC Pub Subnet"
            },
            "vpc_id": "vpc-09a8b2dd07287bfec"
          },
          "dependencies": [
            "aws_vpc.TechVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "TechVPC_Pvt_SN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967126546173:subnet/subnet-0544da56b23b7fe7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0544da56b23b7fe7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "967126546173",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Tech VPC Pvt Subnet"
            },
            "tags_all": {
              "Name": "Tech VPC Pvt Subnet"
            },
            "vpc_id": "vpc-09a8b2dd07287bfec"
          },
          "dependencies": [
            "aws_vpc.TechVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "TechVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:967126546173:vpc/vpc-09a8b2dd07287bfec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-061c3ce4fd652e056",
            "default_route_table_id": "rtb-0ca16727eb044bf9a",
            "default_security_group_id": "sg-08bf229652fdc80b7",
            "dhcp_options_id": "dopt-079ac038f50c45ad4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09a8b2dd07287bfec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ca16727eb044bf9a",
            "owner_id": "967126546173",
            "tags": {
              "Name": "Tech VPC"
            },
            "tags_all": {
              "Name": "Tech VPC"
            }
          }
        }
      ]
    }
  ]
}